--- a/aula 02 - conversor de moedas/style.css
+++ b/aula 02 - conversor de moedas/style.css
@@ -1,5 +1,5 @@
 body {
-  font-family: "Roboto Mono", monospace;
+  font-family: Arial, Helvetica, sans-serif;
   min-height: 400px;
   background-image: url("https://www.alura.com.br/assets/img/imersoes/dev-2021/dia-1-conversor-de-moedas.png");
   background-color: #000000;
