--- a/aula 03 - mentalista/style.css
+++ b/aula 03 - mentalista/style.css
@@ -14,6 +14,20 @@ body {
   height: 100vh;
 }
 
+.caixa{
+    position: absolute;
+  top: 75%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  width: 40%;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 12px;
+  background-color: rgba(0, 0, 0, 0.5);
+  border-radius: 10px;
+  align-items: center;
+  justify-content: center;
+}
+
 .page-title {
   color: #ffffff;
   margin: 0 0 5px;
@@ -48,10 +62,26 @@ input {
 }
 
 button {
-  margin-top: 12px;
-  padding: 4px 8px;
-  border-radius: 10px;
-  background: #ffffff;
+  font-size: 16px;
+  font-weight: 700;
+  text-transform: uppercase;
+  border: none;
+  border-radius: 5px;
+  padding: 7px;
+  cursor: pointer;
+  background-color: #ee375f;
+  color: #fff;
+  box-shadow: 0 5px 0 #8b0426;
+}
+button:hover {
+  background-color: #a3063a;
+  color: #fff;
+  box-shadow: 0 5px 0 #4b0111;
+}
+button:active {
+  position: relative;
+  top: 5px;
+  box-shadow: none;
 }
 
 .resultado {
