--- a/aula 02 - conversor de moedas/style.css
+++ b/aula 02 - conversor de moedas/style.css
@@ -7,7 +7,7 @@
 
 body {
   min-height: 400px;
-  background-image: url("https://d5y9g7a5.rocketcdn.me/wp-content/uploads/2019/09/julius-rock-o-personagem-mais-amado-de-todo-mundo-odeia-o-chris-12.jpg");
+  background-image: url("https://thumbs.dfs.ivi.ru/storage9/contents/2/9/b4f9e65a94dbf7dbe8aa72396d6476.jpg");
   background-color: #000000;
   background-size: cover;
   background-position: center top;
