--- a/aula 03 - mentalista/style.css
+++ b/aula 03 - mentalista/style.css
@@ -1,7 +1,7 @@
 body {
   font-family: Arial;
   min-height: 600px;
-  background-image: url("https://www.alura.com.br/assets/img/imersoes/dev-2021/dia-03-mentalista.png");
+  background-image: url("https://wallpapercave.com/wp/wp2185971.jpg");
   background-color: #000000;
   background-size: cover;
   background-position: center bottom;
