--- a/aula 05 - aluraflix/style.css
+++ b/aula 05 - aluraflix/style.css
@@ -44,6 +44,8 @@ body {
 }
 
 .form-wrapper input {
+  font-family: "Roboto Mono", monospace;
+  width: 350px;
   display: block;
   margin: 0 auto;
   padding: 10px 15px;
@@ -54,6 +56,7 @@ body {
 }
 
 .form-wrapper button {
+  font-family: "Roboto Mono", monospace;
   border: 0;
   color: #ffffff;
   background: #f30d18;
