--- a/aula 05 - aluraflix/style.css
+++ b/aula 05 - aluraflix/style.css
@@ -1,7 +1,7 @@
 body {
   font-family: "Roboto Mono", monospace;
   text-align: center;
-  background-image: url("https://www.alura.com.br/assets/img/imersoes/dev-2021/dia-04-aluraflix-e-filmes.png");
+  background-image: url("https://geekblog.com.br/wp-content/uploads/2021/08/cruella-2-1.jpeg");
   background-color: #000000;
   background-size: cover;
   background-position: center top;
