--- a/aula 06 - objetos e tabela de classificação/style.css
+++ b/aula 06 - objetos e tabela de classificação/style.css
@@ -1,15 +1,20 @@
 * {
   text-align: center;
+  box-sizing: border-box;
 }
 
 body {
   font-family: "Roboto Mono", monospace;
   min-height: 400px;
-  background-image: url("https://www.desktopbackground.org/download/1280x1024/2012/03/24/363668_download-fruit-ninja-1-0_1920x1080_h.jpg");
+  background-image: url("https://i.pinimg.com/originals/65/6b/64/656b64c49008b6344bf43b307fcf4ca8.jpg");
   background-color: #111;
   background-size: 100%;
-  background-position: center;
+  background-position: center top;
   background-repeat: no-repeat;
+}
+
+img{
+  padding: 30px 10px 0 0;
 }
 
 .container {
@@ -40,8 +45,9 @@ body {
 }
 
 table {
-  border: 2px solid white;
+  border: 5px solid #ffffff;
   border-collapse: collapse;
+  margin: 10px 30px;
 }
 
 h1 {
@@ -49,6 +55,39 @@ h1 {
 }
 
 th, tr, td {
-  border: solid 1px white;
-  color: white;
+  border: solid 3px #ffffff;
+  color: #ffffff;
+}
+
+input{
+  font-family: "Roboto Mono", monospace;
+  border: none;
+  outline: 0;
+  padding: 5px 10px;
+  font-size: 14px;
+  border-radius: 4px;
+  margin: 10px 5px;
+  width: 300px;
+}
+
+button {
+  font-family: "Roboto Mono", monospace;
+  border: 0;
+  font-weight: bold;
+  padding: 5px 10px;
+  font-size: 14px;
+  border-radius: 4px;
+  margin: 10px 5px;
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+button:hover {
+  transform: scale(1.03)
+} 
+
+button:active {
+  position: relative;
+  top: 3px;
+  box-shadow: none;
 }
